# rust-backend-template

./: .env.example  .gitignore  Cargo.toml  LICENSE  readme.md
migrations/2025-08-28-203031_create_user/: up.sql
src/: main.rs  schema.rs
src/controllers/: jwt.rs  mod.rs  user.rs  utils.rs
src/models/: error.rs  jwt.rs  user.rs
src/routes/: docs.rs  mod.rs  user.rs
